tests/misc/errors/invalid-typescript-decorators/interface.ts
// invalid place but shouldn't be removed
// #4632

@hello()
interface MyInterface {id: string;
}
